--- a/src/View/home.html.twig
+++ b/src/View/home.html.twig
@@ -1,14 +1,10 @@
-<!doctype html>
-<html lang="fr">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bonjour</title>
-    <link rel="icon" href="/assets/images/favicon.png">
-    <link rel="stylesheet" href="/assets/css/styles.css">
-</head>
+{# src/View/home.html.twig #}
 
-<body>
-    <h1>Hello {{ name }} !</h1>
-</body>
-</html>
+{% extends 'layout.html.twig' %}
+
+{% block title %} {{parent()}} - Acceuil{% endblock %}
+
+{% block content %}
+    <h1>Home</h1>
+    <p>Welcome to my website</p>
+{% endblock %}
